src/test/ui/issues/issue-3521.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/issue-3521.rs:6:15
   |
LL |     let foo = 100;
   |         --- help: consider using `const` instead of `let`
...
LL |         Bar = foo
   |               ^^^ non-constant value

error: aborting due to previous error

For more information about this error, try `rustc --explain E0435`.
